--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,25 @@
 
   
 [package]
-name = "wasm-imgur-brute"
-version = "0.1.0"
-edition = "2018"
+name = "wasm-imgur-bruteforce"
+version = "0.2.0"
+edition = "2021"
 
 [lib]
 crate-type = ["cdylib"]
 
 [features]
-default = ["console_error_panic_hook", "wee_alloc"]
+default = ["wee_alloc"]
 
 [dependencies]
-wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
-js-sys = "0.3.55"
+wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
+js-sys = "0.3.56"
 wasm-bindgen-futures = "0.4.28"
-rand = "0.8.4"
-getrandom = { version = "0.2", features = ["js"] }
-gloo = "0.5.0"
-serde = { version = "1.0.130", features = ["derive"] }
-serde_json = "1.0.68"
-console_error_panic_hook = { version = "0.1.7", optional = true }
+rand = "0.8.5"
+getrandom = { version = "0.2.4", features = ["js"] }
+gloo = "0.6.0"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.79"
 wee_alloc = { version = "0.4.5", optional = true }
 
 [profile.release]
@@ -28,7 +27,7 @@ lto = true
 opt-level = "z"
 
 [dependencies.web-sys]
-version = "0.3.4"
+version = "0.3.56"
 features = [
   'Headers',
   'Request',
