--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 
   
 [package]
-name = "wasm-imgur-bruteforce"
-version = "0.2.0"
+name = "wasm-imgur-brute"
+version = "0.2.1"
+authors = ["Ayes <ayes2022@protonmail.com>"]
 edition = "2021"
+license = "GPLv3"
+description = "Brute-forces imgur links"
+repository = "https://github.com/ayes-web/wasm-imgur-brute"
 
 [lib]
 crate-type = ["cdylib"]
@@ -12,12 +16,13 @@ crate-type = ["cdylib"]
 default = ["wee_alloc"]
 
 [dependencies]
+rand = "0.8.5"
+getrandom = { version = "0.2.6", features = ["js"] }
+
 wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
 js-sys = "0.3.56"
-wasm-bindgen-futures = "0.4.28"
-rand = "0.8.5"
-getrandom = { version = "0.2.4", features = ["js"] }
-gloo = "0.6.0"
+wasm-bindgen-futures = "0.4.29"
+gloo = "0.6.1"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 wee_alloc = { version = "0.4.5", optional = true }
@@ -32,6 +37,7 @@ features = [
   'Headers',
   'Request',
   'RequestInit',
+  'RequestRedirect',
   'Response',
   'Window',
   'Document',
