--- a/www/package.json
+++ b/www/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "common-web-styles": "github:ayes-web/common-web-styles",
+    "feather-icons": "^4.29.0",
     "sass": "^1.56.1",
     "vite": "^3.2.2",
     "vite-plugin-top-level-await": "^1.2.1",
