--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 
 
 [package]
-name = "wasm-imgur-brute"
-version = "0.3.0"
+name = "wasm-bruteforce"
+version = "0.3.1"
 authors = ["Ayes <ayes2022@protonmail.com>"]
 edition = "2021"
 license = "GPLv3"
 description = "Bruteforce images from image hosting websites"
-repository = "https://github.com/ayes-web/wasm-imgur-brute"
+repository = "https://github.com/ayes-web/wasm-bruteforce"
 
 [lib]
 crate-type = ["cdylib"]
