--- a/www/package.json
+++ b/www/package.json
@@ -16,6 +16,7 @@
     "feather-icons": "^4.29.0",
     "sass": "^1.56.1",
     "vite": "^3.2.2",
+    "vite-plugin-pwa": "^0.13.3",
     "vite-plugin-top-level-await": "^1.2.1",
     "vite-plugin-wasm": "^3.1.0"
   }
